corrected letter spacing

--- a/src/sass/layout/_introduction.scss
+++ b/src/sass/layout/_introduction.scss
@@ -140,6 +140,7 @@
       font-size: 16px;
       margin-top: 42px;
       margin-bottom: 28px;
+      letter-spacing: normal;
     }
   }
   &__btn {
